# tokgain

./: .gitignore  LICENSE  PLAN.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
_docs/: mbp-token-savings-tool-inventory.md
scripts/: com.tokgain.daily.plist.template  install-launchd.sh
src/tokgain/: __init__.py  bench.py  cli.py  mcp_proxy.py  measure.py  observe.py  pricing.py  store.py
src/tokgain/adapters/: __init__.py  common.py  fff.py  h5i.py  headroom.py  lean_ctx.py  rtk.py
src/tokgain/data/: prices.json
tests/: test_cli.py  test_launchd_template.py  test_pricing.py
