[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokgain"
version = "0.1.0"
description = "Local token savings collector for coding-agent compression tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "tokgain contributors"}]
keywords = ["codex", "claude", "tokens", "savings", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Utilities",
]

[project.scripts]
tokgain = "tokgain.cli:main"
tokgain-mcpproxy = "tokgain.cli:mcp_proxy_main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokgain = ["data/*.json"]
